--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.13.4",
+    "element-plus": "^2.13.2",
     "vue": "^3.5.24",
     "vue-router": "^5.0.2"
   },
